# todo-app

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  todo-app.cabal
app/: Main.hs
prisma/: schema.prisma
src/app/: layout.tsx  page.tsx
src/app/actions/: auth.ts  todo.tsx
src/app/lib/: definitions.ts  session.ts  todo.tsx
src/app/login/: page.tsx
src/app/signup/: page.tsx
src/app/ui/: button.tsx  input.tsx  login-form.tsx  navbar.tsx  signup-form.tsx  spinner.tsx  todo-form.tsx  todo.tsx  todos.tsx
