cabal-version:      3.0
name:               todo-app
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable todo-app
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
