cabal-version:      3.0
name:               todo-app
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable todo-app
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    aeson >= 2.2.1.0,
                      base ^>=4.17.2.1,
                      bytestring >= 0.12.1,
                      http-media >= 0.8.1.1,
                      lucid >= 2.11.20230408,
                      servant-auth >= 0.4.1.0,
                      servant-auth-server >= 0.4.8.0,
                      servant-server >= 0.20,
                      text >= 2.1.1,
                      warp >= 3.3.21
    hs-source-dirs:   app
    default-language: Haskell2010
